Tailwind styling and website Responsiveness

--- a/src/index.css
+++ b/src/index.css
@@ -2,3 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
+*{
+    margin: 0;
+    padding: 0;
+}
+
+body{
+    height : 100vh;
+    background: black;
+    color:white;
+}
